--- a/package.json
+++ b/package.json
@@ -62,5 +62,6 @@
   "resolutions": {
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0"
-  }
+  },
+  "proxy": "https://localhost:3000"
 }
